--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "server": "nodemon ./server/server.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -13,6 +14,8 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
