--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "cors": "^2.8.5",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "express": "^4.17.1",
+    "firebase": "^7.9.0",
     "nodemon": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
